# factura-scanner-mvp

./: .gitignore
backend/: .env  Dockerfile  Dockerfile.ocr  README.md  docker-compose.yml  main.py  main_ocr.py  main_tesseract.py  ocr_service.py  pyproject.toml  run.sh
backend/services/: ProcesadorFactura.py  ProcesadorFacturaOCR.py  ProcesadorFacturaTesseract.py  main.py
backend_node/: .gitignore  CLAUDE.md  CODIGOS.md  DOCUMENTACION_COMPLETA.md  Features.md  compose.yaml  get-token.js  google-credentials.json  package-lock.json  package.json  setup.sh  tsconfig.json
backend_node/docs/: PDR-AUTH-SYSTEM.md
backend_node/prisma/: schema.prisma
backend_node/prisma/migrations/20251213172322_init/: migration.sql
backend_node/src/: index.ts  kapso.ts  ocr.ts
backend_node/src/db/: client.ts
backend_node/src/domain/: user.ts
backend_node/src/dtos/: documento.dto.ts  user.dto.ts
backend_node/src/repositories/: document.repository.ts  user.repository.ts
backend_node/src/scripts/: cleanup-trash.ts
backend_node/src/services/: document.service.ts  google-auth.service.ts  google-drive.service.ts  google-sheet.service.ts  user.service.ts  whatsapp.service.ts
backend_node/src/types/: conversation.types.ts  kapso.ts  message.document.kapso.ts  webhook.ts
backend_node/src/utils/: kapso-webhook.ts
